--- a/views/index.ejs
+++ b/views/index.ejs
@@ -54,12 +54,14 @@
              </div>
 
         </form>
-    
+<div class="main-wrapper">
 <div class="content d-flex flex-column flex-column-fluid" >
       <%- include('DigimonSystem/battleSystem') %>
 <div id="digimon-select-container"></div>
 <div class="container" >
+  <div class="battle-wrapper">
    <button class="battle-button">Battle</button>
+   </div>
   <div class="text-end">
     <button id="addDigimon" type="button" class="btn btn-primary">
       <i class="fa fa-plus"></i> Add Digimon
@@ -67,7 +69,7 @@
   </div>
 
         
-
+    <div class="table-container">
 <table id="DigiList">
 <thead>
   <tr class="digimonsT">
@@ -98,6 +100,7 @@
 </thead>
 <tbody id="userTable"></tbody>
 </table>
+</div>
   <div class="pagination-wrapper mb-0">
     <ul class="pagination mb-0" id="pages">
     </ul>
@@ -108,7 +111,7 @@
 <%- include('RegisterSystem/resetpassword') %>
 </div>
 </div>
-
+</div>
 </div>
 
 </body>
