--- a/views/loginSystem/loginPage.ejs
+++ b/views/loginSystem/loginPage.ejs
@@ -12,7 +12,7 @@
 
 
     <div>
-    <label>remamber you?  </label>
+    <label>remember you?  </label>
     <input type="checkbox" id="remamber" />
     </div>
     <a class="forgot-password">Forgot your password?</a>
