--- a/views/index.ejs
+++ b/views/index.ejs
@@ -116,13 +116,14 @@
 
 </body>
 <script>
-  const mode = "<%= mode %>";
-  <% if (mode === "loggedIn") { %>
-    const user = <%- JSON.stringify(user) %>;
-  <% } %>
-  <% if (mode === "reset") { %>
-    const token = <%- JSON.stringify(token) %>;
-  <% } %>
+  const isLoggedIn = <%= JSON.stringify(isLoggedIn) %>;
+  const Havetoken = <%= JSON.stringify(Havetoken) %>;
+<% if (isLoggedIn) { %>
+  const user = <%- JSON.stringify(user) %>;
+<% } %>
+<% if (Havetoken) { %>
+  const token = <%- JSON.stringify(token) %>;
+<% } %>
 </script>
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
