fix money problem on login

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,11 +17,9 @@
     <a href="" class="Statistic">Statistic</a>
     <a href="" class="Shop">Shop</a>
     <a href="" class="bag">Bag</a>
-    <% if (user) { %>
     <span class="money-display">
-        <i class="fa fa-money"></i> : <%= user.money %>
+        <i class="fa fa-money"></i> 
     </span>
-<% } %>
     <a href="/logout" class="logout-btn">Logout</a>
   </div>
   </div>
