fix home page bug

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 <body>
   <div class="bar">
   <div class="navbar">
-    <a href="/" class="home">Home</a>
+    <a href="" class="home">Home</a>
     <a href="" class="Statistic">Statistic</a>
     <a href="" class="Shop">Shop</a>
     <a href="" class="bag">Bag</a>
