fix shop,inventory and disable buttons in battle system in battle time

--- a/views/inventorySystem/inventorypage.ejs
+++ b/views/inventorySystem/inventorypage.ejs
@@ -9,7 +9,7 @@
     <td><%= useritem.item.description %></td>
     <td><%= useritem.quantity %></td>
 <td>
-  <button class="btn btn-use" type="button" >
+  <button class="btn-use" type="button" >
     use
   </button>
     </td>
