--- a/views/shopSystem/shoppage.ejs
+++ b/views/shopSystem/shoppage.ejs
@@ -12,7 +12,7 @@
         <input class="amount-input" type="number" placeholder="amount"/>
     </td>
 <td>
-  <button class="btn btn-buy" type="button" >
+  <button class="btn-buy" type="button" >
     buy
   </button>
     </td>
