--- a/views/DigimonSystem/battleSystem.ejs
+++ b/views/DigimonSystem/battleSystem.ejs
@@ -31,8 +31,8 @@
       </div>
 
       <div class="options-box">
-        <button class="battle-btn">FIGHT</button>
-        <button class="run-btn">RUN</button>
+    <button type="button" class="battle-btn">FIGHT</button>
+    <button type="button" class="run-btn">RUN</button>
       </div>
     </div>
   </div>
