add pay for new digimon

--- a/views/RegisterSystem/resetpassword.ejs
+++ b/views/RegisterSystem/resetpassword.ejs
@@ -4,7 +4,7 @@
     <label for="newPassword">newPassword</label>
     <input type="password" id="NewPassword" placeholder="">
 
-     <label for="confirmPassword">confirm_Password</label>
+     <label for="confirmPassword">confirmNewPassword</label>
     <input type="password" id="confirmPassword" placeholder="">
 
     <button type="submit" class="Creset-btn">ResetPassword</button>
