--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title class="title">loginPage</title> 
+    <title class="title">LoginPage</title> 
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -44,7 +44,6 @@
              </div>
 
         </form>
-
          <form id="DigiPhoto" class="DigiDetails">
              <img id="photopage" src="">
              <div class="horizontal"></div>
