--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,6 +38,9 @@
              <h6 id="defense"></h6>
              </div>
              <br>
+            <h5 class="digimon-warning center-text">create new digimon cost 100$</h5>
+            <h5 class="digimon-warning center-text">ARE YOU SURE?</h5>
+             <br>
              <div class="horizontal">
               <button class="button submit-btn">accept</button>
               <button class="button cancel-btn">cancel</button>
