--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,7 @@
 <head>
     <title class="title">LoginPage</title> 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css" media="(max-width: 768px) and (max-height: 768px)">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,16 +14,22 @@
 
 <body>
   <div class="bar">
-  <div class="navbar">
+<div class="navbar">
+  <div class="menu-toggle">&#9776;</div>
+
+  <div class="nav-links">
     <a href="" class="home">Home</a>
     <a href="" class="Statistic">Statistic</a>
     <a href="" class="Shop">Shop</a>
     <a href="" class="bag">Bag</a>
-    <span class="money-display">
-        <i class="fa fa-money"></i> 
-    </span>
-    <a href="/logout" class="logout-btn">Logout</a>
   </div>
+
+  <span class="money-display">
+    <i class="fa fa-money"></i> 
+  </span>
+  <a href="/logout" class="logout-btn">Logout</a>
+</div>
+
   </div>
   <img src=""/>
   <div class="message">
@@ -68,6 +75,9 @@
       <i class="fa fa-plus"></i> Add Digimon
     </button>
   </div>
+<div class="mobile-digi">
+</div>
+
 
         
     <div class="table-container">
