--- a/public/style.css
+++ b/public/style.css
@@ -151,15 +151,17 @@ td img {
 }
 
 .message {
-  position: fixed; 
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 800px;
   height: 80px;
-  margin-top: 10%;
-  margin-left: 30%;
   padding: 10px;
   border: 5px solid gray;
   background-color: white;
   text-align: center;
+  z-index: 9999;
 }
 .progress-wrapper {
   width: 100%;
