--- a/public/mobile.css
+++ b/public/mobile.css
@@ -205,11 +205,25 @@
 .right-arrow {
   left: 100%;
 }
-
-
-#addDigimon {
-    margin-right: 30px;
+/*add digimon and battle button*/
+.actions-wrapper {
+    display: flex;
+    flex-direction: column;  
+    align-items: center;
+    justify-content: center;
+    gap:2px;
+    margin-bottom: 5px;
   }
+
+  #addDigimon {
+    display: block !important;
+    margin: 0 !important;
+  }
+
+  .battle-button {
+    display: block !important;
+  }
+}
 .DigiDetails {
   display: none;
   position: fixed;
@@ -283,5 +297,3 @@
   transform: translateX(-50%);
 }
 
-
-}
