--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,6 +67,7 @@
       <%- include('DigimonSystem/battleSystem') %>
 <div id="digimon-select-container"></div>
 <div class="container" >
+  <div class="actions-wrapper">
   <div class="battle-wrapper">
    <button class="battle-button">Battle</button>
    </div>
@@ -74,6 +75,7 @@
     <button id="addDigimon" type="button" class="btn btn-primary">
       <i class="fa fa-plus"></i> Add Digimon
     </button>
+  </div>
   </div>
 <div class="mobile-digi">
 </div>
