--- a/public/mobile.css
+++ b/public/mobile.css
@@ -1,5 +1,9 @@
 @media (max-width: 768px), (max-height: 768px) {
 
+.actions-wrapper {
+  display: none;
+}
+  
   /*login*/
   .login-container {
     width: 60vw;                    
