--- a/public/mobile.css
+++ b/public/mobile.css
@@ -1,7 +1,7 @@
 @media (max-width: 768px), (max-height: 768px) {
 
-  .actions-wrapper {
-  display: none !important;
+.actions-wrapper.show-force {
+  display: block !important;
 }
   
   /*login*/
