--- a/public/mobile.css
+++ b/public/mobile.css
@@ -107,33 +107,57 @@
     margin: 20px auto;        
   }
   /*statistic*/
-    .statistic-container {
-    width: 95%;
-    padding: 15px;
-  }
+.statistic-container {
+  width: 80%;
+  padding: 10px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;   
+  justify-content: center;
+  box-sizing: border-box;
+}
 
-  .statistic-photo {
-    max-width: 120px;
-    max-height: 120px;
-  }
 
-  #winsCanvas, #losesCanvas {
-    width: 80px !important;
-    height: 80px !important;
-  }
-    #userTable,
-    .btn-page{
-    display: none !important;
+.statistic-photo {
+  margin-top: 10px;
+  max-width: 150px;
+  max-height: 120px;
+  object-fit: contain;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;      
+}
+
+.canvas-chart {
+  display: none !important;
+}
+
+.wins-loses-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#winsCanvas,
+#losesCanvas {
+  width: 100px !important;
+  height: 120px !important;
+}
+
+#userTable,
+  .btn-page{
+  display: none !important;
   }
 
   /*digimon-card*/
-  .digi-mobile-wrapper {
+  .mobile-wrapper {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-  .digi-mobile-card {
+.mobile-card {
   width: 100%;
   max-width: 350px;
   margin: 20px auto;
@@ -146,7 +170,7 @@
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.digi-mobile-card:hover {
+.mobile-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
 }
