--- a/views/inventorySystem/inventoryMobile.ejs
+++ b/views/inventorySystem/inventoryMobile.ejs
@@ -6,11 +6,11 @@
     <h3 class="item-name"> <%= useritems[index].item.name %></h3>
     <div class="item-info">
       <p class="itemDescription"><strong>Description:
-        <br>
-      </strong> <%= useritems[index].item.description %></p>
+      </strong>
+      <br> <%= useritems[index].item.description %></p>
      <p class="itemAmount"><strong>Amount:
-      <br>
-      </strong> <%= useritems[index].quantity %></p>
+      </strong>
+      <br> <%= useritems[index].quantity %></p>
     </div> 
      <button class="btn btn-success btn-use" data-id="<%=  useritems[index].item.id %>"   data-name="<%= useritems[index].item.name %>">use</button>
   </div>
