--- a/views/loginSystem/loginPage.ejs
+++ b/views/loginSystem/loginPage.ejs
@@ -10,11 +10,11 @@
     <button type="submit" class="login-btn">Login</button>
     <button type="submit" class="register-btn">Register</button>
 
-
-    <div>
-    <label>remember you?  </label>
-    <input type="checkbox" id="remamber" />
+    <div class="remember-row">
+      <label for="remamber">remember you?</label>
+      <input type="checkbox" id="remamber" />
     </div>
+
     <a class="forgot-password">Forgot your password?</a>
   </form>
 </div>
