--- a/public/mobile.css
+++ b/public/mobile.css
@@ -295,7 +295,12 @@
 
 .message {
   width: 250px;
-  height: 100px;
+  height: auto;        
+  min-height: 100px; 
+  box-sizing: border-box;
+  padding: 12px;
+  line-height: 1.4;
+  word-break: break-word;
 }
 /*   navbar  */
 
