--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,13 @@
 html, body {
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
 }
+html {
+  -webkit-text-size-adjust: 100%;
+  text-size-adjust: 100%;
+}
+
 .container {
   top: 20vh;    
   left: 15vw;   
