--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="mobile.css" media="(max-width: 768px) and (max-height: 768px)">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <meta name="description" content="Login to Digimontra and continue your Digimon adventure. Train, battle and manage your Digimon online.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 </head>
